<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/grp_common">

        <EditTextPreference
            app:icon="@drawable/ic_social_emoji_symbols"
            app:key="groupName"
            app:title="@string/grp_name"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/group_types"
            app:entryValues="@array/int_array_2"
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="groupType"
            app:title="@string/grp_type"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:icon="@drawable/ic_hardware_router"
            app:key="groupFrontProxyId"
            app:persistent="false"
            app:title="@string/grp_front_proxy" />

        <Preference
            app:icon="@drawable/baseline_public_24"
            app:key="groupLandingProxyId"
            app:persistent="false"
            app:title="@string/grp_landing_proxy" />

        <SwitchPreference
            app:icon="@drawable/baseline_delete_sweep_24"
            app:key="groupAutoClearUnavailable"
            app:title="@string/grp_auto_clear_unavailable" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="groupSubscription"
        app:title="@string/subscription">

        <io.nekohasekai.sagernet.widget.LinkOrContentPreference
            app:icon="@drawable/ic_baseline_link_24"
            app:key="subscriptionLink"
            app:title="@string/grp_url"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:icon="@drawable/ic_baseline_update_24"
            app:key="groupSkipAutoUpdate"
            app:title="@string/grp_skip_auto_update" />

        <Preference
            app:icon="@drawable/ic_baseline_expand_more_24"
            app:key="groupAdvancedToggle"
            app:persistent="false"
            app:title="@string/grp_advanced" />

    </PreferenceCategory>

    <PreferenceCategory
        app:isPreferenceVisible="false"
        app:key="groupAdvancedRequest"
        app:title="@string/grp_request">

        <EditTextPreference
            app:dialogMessage="@string/grp_user_agent_tip"
            app:icon="@drawable/ic_baseline_http_24"
            app:key="groupSubUserAgent"
            app:title="@string/grp_user_agent" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="groupSubSendHwid"
            app:title="@string/grp_send_hwid" />

        <EditTextPreference
            app:key="groupSubHwid"
            app:title="@string/grp_hwid" />

        <EditTextPreference
            app:key="groupSubHwidOs"
            app:title="@string/grp_os" />

        <EditTextPreference
            app:key="groupSubHwidOsVersion"
            app:title="@string/grp_os_version" />

        <EditTextPreference
            app:key="groupSubHwidModel"
            app:title="@string/grp_device_model" />

    </PreferenceCategory>

    <PreferenceCategory
        app:isPreferenceVisible="false"
        app:key="groupAdvancedUpdate"
        app:title="@string/grp_update">

        <SwitchPreference
            app:key="groupSubKeepWorking"
            app:summary="@string/grp_keep_working_tip"
            app:title="@string/grp_keep_working" />

    </PreferenceCategory>

    <PreferenceCategory
        app:isPreferenceVisible="false"
        app:key="groupAdvancedAfterUpdate"
        app:title="@string/grp_after_each_update">

        <SwitchPreference
            app:key="groupSubRemoveDuplicates"
            app:title="@string/grp_remove_duplicates" />

        <SwitchPreference
            app:key="groupSubRemoveInsecure"
            app:title="@string/grp_remove_insecure" />

        <SwitchPreference
            app:key="groupSubRemoveInvalid"
            app:summary="@string/grp_remove_invalid_tip"
            app:title="@string/grp_remove_invalid" />

        <SwitchPreference
            app:key="groupSubUrlTest"
            app:summary="@string/grp_url_test_tip"
            app:title="@string/grp_url_test" />

        <SwitchPreference
            app:dependency="groupSubUrlTest"
            app:key="groupSubRemoveUnavailable"
            app:summary="@string/grp_url_test_only"
            app:title="@string/grp_remove_unavailable" />

        <SwitchPreference
            app:dependency="groupSubUrlTest"
            app:key="groupSubSortByLatency"
            app:summary="@string/grp_url_test_only"
            app:title="@string/grp_sort_by_latency" />

    </PreferenceCategory>

</PreferenceScreen>
