<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/cag_cache">
        <EditTextPreference
            app:key="dns_cache_capacity"
            app:title="@string/dns_cache_capacity"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="dns_disable_cache"
            app:title="@string/dns_disable_cache" />
        <SwitchPreference
            app:key="dns_disable_expire"
            app:title="@string/dns_disable_expire" />
        <SwitchPreference
            app:key="dns_optimistic"
            app:summary="@string/dns_optimistic_sum"
            app:title="@string/dns_optimistic" />
        <EditTextPreference
            app:dialogMessage="@string/duration_dialog_message"
            app:key="dns_optimistic_timeout"
            app:title="@string/dns_optimistic_timeout" />
        <SwitchPreference
            app:key="dns_persist_cache"
            app:summary="@string/dns_persist_cache_sum"
            app:title="@string/dns_persist_cache" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_advanced">
        <EditTextPreference
            app:dialogMessage="@string/duration_dialog_message"
            app:key="dns_query_timeout"
            app:title="@string/dns_query_timeout" />
        <SwitchPreference
            app:key="dns_reverse_mapping"
            app:title="@string/dns_reverse_mapping" />
    </PreferenceCategory>
</PreferenceScreen>
