<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/cag_connection">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="vpn"
            app:entries="@array/service_modes"
            app:entryValues="@array/service_mode_values"
            app:icon="@drawable/ic_device_developer_mode"
            app:key="serviceMode"
            app:title="@string/service_mode"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_communication_phonelink_ring"
            app:key="remember_enable"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_behaviour">
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="networkChangeResetConnections"
            app:title="@string/network_change_reset_connections" />
        <SwitchPreference
            app:key="wakeResetConnections"
            app:title="@string/wake_reset_connections" />
        <SwitchPreference
            app:icon="@drawable/baseline_developer_board_24"
            app:key="acquireWakeLock"
            app:summary="@string/acquire_wake_lock_summary"
            app:title="@string/acquire_wake_lock" />
        <SwitchPreference
            app:icon="@drawable/ic_device_data_usage"
            app:key="meteredNetwork"
            app:summary="@string/metered_summary"
            app:title="@string/metered" />
        <SwitchPreference
            app:key="hideFromRecentApps"
            app:summary="@string/hide_from_recent_apps_summary"
            app:title="@string/hide_from_recent_apps" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_delete_24"
            app:key="skip_delete_confirmation"
            app:summary="@string/skip_delete_confirmation_sum"
            app:title="@string/skip_delete_confirmation" />
    </PreferenceCategory>
</PreferenceScreen>
