<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_share_subscription"
        android:title="@string/grp_share_subscription">
        <menu>
            <item
                android:id="@+id/action_universal_clipboard"
                android:title="@string/action_export_clipboard" />
            <item
                android:id="@+id/action_universal_qr"
                android:title="@string/share_qr_nfc" />
        </menu>
    </item>
    <item
        android:id="@+id/action_copy_links"
        android:title="@string/grp_copy_links" />
    <item
        android:id="@+id/action_copy_deep_links"
        android:title="@string/grp_copy_deep_links" />
    <item
        android:id="@+id/action_export_file"
        android:title="@string/action_export_file" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/grp_clear_profiles" />
    <item
        android:id="@+id/action_move_up"
        android:title="@string/grp_move_up" />
    <item
        android:id="@+id/action_move_down"
        android:title="@string/grp_move_down" />
    <item
        android:id="@+id/action_remove"
        android:title="@string/delete" />
</menu>
