<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_route_edit"
        android:title="@string/edit" />
    <item
        android:id="@+id/action_route_clone"
        android:title="@string/route_clone" />
    <item
        android:id="@+id/action_route_share"
        android:title="@string/share">
        <menu>
            <item
                android:id="@+id/action_route_share_clipboard"
                android:title="@string/action_export_clipboard" />
            <item
                android:id="@+id/action_route_share_qr"
                android:title="@string/share_qr_nfc" />
        </menu>
    </item>
    <item
        android:id="@+id/action_route_update"
        android:title="@string/group_update" />
    <item
        android:id="@+id/action_route_delete"
        android:title="@string/delete" />
</menu>
